--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -35,530 +35,21 @@ and open the template in the editor.
 <canvas id="myCanvas" width="1000" height="500" style="border:10px solid #d3d3d3;">
     Your browser does not support the HTML5 canvas tag.
 </canvas>
+<script src="/js/laboratoryNames.js"></script>
 
+<!--  Ing. Software -->
 
-<!--  Nombres de los laboratorios -->
+<!--  Plataformas -->
+<script src="/js/setUpPlataformas.js"></script>
 
-<!-- <script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    var miimagen= new Image();
-    //miimagen.src="http://laboratorio.is.escuelaing.edu.co:8080/silabinfoap/images/laboratorioInformaticaLogo.png";
-    miimagen.onload =funtion(){
-          //ctx.drawImage(miimagen,0,0);
-    }
- </script>-->
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.font = "15px Georgia";
-    ctx.fillText("Laboratorio de Software", 750, 280);
-</script>
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.font = "15px Georgia";
-    ctx.fillText("Laboratorio de Plataformas", 350, 280);
-</script>
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.font = "15px Georgia";
-    ctx.fillText("Laboratorio de Redes", 50, 280);
-</script>
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.font = "15px Georgia";
-    ctx.fillText("Laboratorio de Sistemas B0", 630, 150);
-</script>
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.font = "15px Georgia";
-    ctx.fillText("Laboratorio de Multimedia", 50, 15);
-</script>
+<!--  Redes -->
+<script src="/js/setUpRedes.js"></script>
 
+<script src="/js/initInstructions.js"></script>
 
-<!--  puestos de computadores de los laboratorios -->
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    // Create gradient
-    var grd = ctx.createLinearGradient(0, 0, 200, 0);
-    grd.addColorStop(0, "#DBA901");
-    // Fill with gradient
-    ctx.fillStyle = grd;
-    ctx.fill();
-    ctx.fillRect(635, 300, 30, 200);
-</script>
-<!--Puesto de pantallas 2-->
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    // Create gradient
-    var grd = ctx.createLinearGradient(0, 0, 200, 0);
-    grd.addColorStop(0, "#DBA901");
+<script src="/js/setUpSoftware.js"></script>
 
-    // Fill with gradient
-    ctx.fillStyle = grd;
 
-    ctx.fill();
-    ctx.fillRect(730, 300, 60, 200);
-</script>
-<!--Puesto de pantallas 3-->
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    // Create gradient
-    var grd = ctx.createLinearGradient(0, 0, 200, 0);
-    grd.addColorStop(0, "#DBA901");
-
-    // Fill with gradient
-    ctx.fillStyle = grd;
-
-    ctx.fill();
-    ctx.fillRect(850, 300, 60, 200);
-</script>
-<!--Puesto de pantallas 4-->
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    // Create gradient
-    var grd = ctx.createLinearGradient(0, 0, 200, 0);
-    grd.addColorStop(0, "#DBA901");
-
-    // Fill with gradient
-    ctx.fillStyle = grd;
-
-    ctx.fill();
-    ctx.fillRect(970, 300, 30, 200);
-</script>
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    // Create gradient
-    var grd = ctx.createLinearGradient(0, 0, 200, 0);
-    grd.addColorStop(0, "#DBA901");
-
-    // Fill with gradient
-    ctx.fillStyle = grd;
-
-    ctx.fill();
-    ctx.fillRect(635, 265, 40, 5);
-</script>
-
-
-<!--Puesto de pantallas 1-->
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    // Create gradient
-    var grd = ctx.createLinearGradient(0, 0, 200, 0);
-    grd.addColorStop(0, "#DBA901");
-
-    // Fill with gradient
-    ctx.fillStyle = grd;
-
-    ctx.fill();
-    ctx.fillRect(550, 300, 50, 200);
-</script>
-<!--Puesto de pantallas 2-->
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    // Create gradient
-    var grd = ctx.createLinearGradient(0, 0, 200, 0);
-    grd.addColorStop(0, "#DBA901");
-
-    // Fill with gradient
-    ctx.fillStyle = grd;
-
-    ctx.fill();
-    ctx.fillRect(400, 300, 90, 200);
-</script>
-<!--Puesto de pantallas 3-->
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    // Create gradient
-    var grd = ctx.createLinearGradient(0, 0, 200, 0);
-    grd.addColorStop(0, "#DBA901");
-
-    // Fill with gradient
-    ctx.fillStyle = grd;
-
-    ctx.fill();
-    ctx.fillRect(280, 300, 50, 200);
-</script>
-
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    // Create gradient
-    var grd = ctx.createLinearGradient(0, 0, 200, 0);
-    grd.addColorStop(0, "#DBA901");
-
-    // Fill with gradient
-    ctx.fillStyle = grd;
-
-    ctx.fill();
-    ctx.fillRect(550, 265, 50, 5);
-</script>
-<!--Puesto de pantallas 1-->
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    // Create gradient
-    var grd = ctx.createLinearGradient(0, 0, 200, 0);
-    grd.addColorStop(0, "#DBA901");
-
-    // Fill with gradient
-    ctx.fillStyle = grd;
-
-    ctx.fill();
-    ctx.fillRect(0, 300, 50, 200);
-</script>
-<!--Puesto de pantallas 2-->
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    // Create gradient
-    var grd = ctx.createLinearGradient(0, 0, 200, 0);
-    grd.addColorStop(0, "#DBA901");
-
-    // Fill with gradient
-    ctx.fillStyle = grd;
-
-    ctx.fill();
-    ctx.fillRect(130, 300, 80, 200);
-</script>
-
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    // Create gradient
-    var grd = ctx.createLinearGradient(0, 0, 200, 0);
-    grd.addColorStop(0, "#DBA901");
-
-    // Fill with gradient
-    ctx.fillStyle = grd;
-
-    ctx.fill();
-    ctx.fillRect(230, 265, 50, 5);
-</script>
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.beginPath();
-    ctx.arc(50, 230, 10, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-</script>
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.font = "20px Georgia";
-    ctx.fillText("Libre", 75, 235);
-</script>
-
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.beginPath();
-    ctx.arc(200, 230, 10, 0, 2 * Math.PI);
-    ctx.fillStyle = "#B40404";
-    ctx.fill();
-    ctx.stroke();
-</script>
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.font = "20px Georgia";
-    ctx.fillText("Ocupado", 230, 235);
-</script>
-
-
-<!-- laboratorio de Software -->
-<!--Puesto de pantallas 1-->
-<!--computador 1 al 4-->
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.beginPath();
-    ctx.arc(650, 330, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.beginPath();
-    ctx.arc(650, 380, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-
-    ctx.beginPath();
-    ctx.arc(650, 430, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-
-    ctx.beginPath();
-    ctx.arc(650, 480, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-</script>
-
-
-<!--computador 5 al 12-->
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.beginPath();
-    ctx.arc(745, 480, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.beginPath();
-    ctx.arc(745, 430, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-
-    ctx.beginPath();
-    ctx.arc(745, 380, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-
-    ctx.beginPath();
-    ctx.arc(745, 330, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-</script>
-
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.beginPath();
-    ctx.arc(775, 330, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.beginPath();
-    ctx.arc(775, 380, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-
-    ctx.beginPath();
-    ctx.arc(775, 430, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-
-    ctx.beginPath();
-    ctx.arc(775, 480, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-</script>
-
-<!--computador 13 al 20-->
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.beginPath();
-    ctx.arc(865, 480, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.beginPath();
-    ctx.arc(865, 430, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-
-    ctx.beginPath();
-    ctx.arc(865, 380, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-
-    ctx.beginPath();
-    ctx.arc(865, 330, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-</script>
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.beginPath();
-    ctx.arc(895, 330, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.beginPath();
-    ctx.arc(895, 380, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-
-    ctx.beginPath();
-    ctx.arc(895, 430, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-
-    ctx.beginPath();
-    ctx.arc(895, 480, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-</script>
-
-
-<!--computador 21 al 24-->
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.beginPath();
-    ctx.arc(985, 330, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.beginPath();
-    ctx.arc(985, 380, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-
-    ctx.beginPath();
-    ctx.arc(985, 430, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
-
-
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-
-    ctx.beginPath();
-    ctx.arc(985, 480, 8, 0, 2 * Math.PI);
-    ctx.fillStyle = "#00FF00";
-    ctx.fill();
-    ctx.stroke();
-
-</script>
 
 
 <!--Laboratorio de plataformas -->
