laboratorios.js added

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -35,6 +35,8 @@ and open the template in the editor.
 <canvas id="myCanvas" width="1000" height="500" style="border:10px solid #d3d3d3;">
     Your browser does not support the HTML5 canvas tag.
 </canvas>
+<script src="/js/laboratorios.js"></script>
+
 <script src="/js/laboratoryNames.js"></script>
 
 <!--  Ing. Software -->
